--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-flatpickr==1.0.1
 idna==2.10
 oauthlib==3.1.0
 Pillow==8.1.0
+psycopg2==2.8.6
 psycopg2-binary==2.8.6
 pycparser==2.20
 PyJWT==2.0.0
